--- a/AIoT/templates/AIoT/getdata.html
+++ b/AIoT/templates/AIoT/getdata.html
@@ -180,7 +180,7 @@ select {
         speech.lang = "ja"; //言語を日本語に設定
         speech.onerror = function(){
           if(speech_status == 0)
-            console.log("error")
+            // console.log("error")
             Speech_Rec();
         }
         speech.onsoundend = function(){
