--- a/AIoT/templates/AIoT/mailconfirm.html
+++ b/AIoT/templates/AIoT/mailconfirm.html
@@ -120,7 +120,7 @@ h3 {
       speech.lang = "ja"; //言語を日本語に設定
       speech.onerror = function(){
         if(speech_status == 0)
-          console.log("error")
+          // console.log("error")
           Speech_Rec();
       }
       speech.onsoundend = function(){
