--- a/AIoT/templates/AIoT/pict_list.html
+++ b/AIoT/templates/AIoT/pict_list.html
@@ -117,8 +117,8 @@ function slide_show() {
         "onclick":"slide_order('stop')",
       }).text("停止");
     }
-    console.log("start:" + cnt);
-    console.log("list:" + pict_list[cnt]);
+    // console.log("start:" + cnt);
+    // console.log("list:" + pict_list[cnt]);
     d3.select("#slide_"+pict_list[cnt])
     .transition("open").duration(1500).style("opacity",1)
     .transition("close").duration(1500).style("opacity",0);
@@ -147,7 +147,7 @@ function slide_show() {
       "onclick":"slide_order('next')",
       "display":"inline",
     }).text("次へ");
-    console.log("stop:" + cnt);
+    // console.log("stop:" + cnt);
   } else if (state_slide == "end"){
     clearInterval(show);
     d3.select("#slide_"+pict_list[cnt]).interrupt();
@@ -196,7 +196,7 @@ function slide_order(str) {
     if (cnt == pict_list.length) {
       cnt = cnt -1;
     }
-    console.log("next:" + cnt);
+    // console.log("next:" + cnt);
     d3.select("#header_text").text(pict_list[cnt]);
     d3.select("#slide_"+pict_list[cnt]).style("opacity",1);
   } else if(str == "previous") {
@@ -205,7 +205,7 @@ function slide_order(str) {
     if (cnt < 0) {
       cnt = 0;
     }
-    console.log("previous:" + cnt);
+    // console.log("previous:" + cnt);
     d3.select("#header_text").text(pict_list[cnt]);
     d3.select("#slide_"+pict_list[cnt]).style("opacity",1);
   } else{
@@ -446,7 +446,7 @@ function Speech_Rec(){
   speech.lang = "ja"; //言語を日本語に設定
   speech.onerror = function(){
     if(speech_status == 0)
-      console.log("error")
+      // console.log("error")
       Speech_Rec();
   }
   speech.onsoundend = function(){
