「聞いて」をチャットに表示するように変更。

--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -815,6 +815,7 @@ function Speech_Rec(){
             }
           } else if(Rec_Mode == 2){
             if(text1 == "聞いて"){
+              OnseiHyouji_User(text1);
               OnseiGousei("何でも聞きますよ");
             }
           }
